# cloudlabeller

./: .gitattributes  .gitignore  CITATION.cff  CLAUDE.md  DESIGN.md  README.md  pyproject.toml  requirements.txt
.claude/: settings.json
.matplotlib/: fontlist-v390.json
cloudlabeller/: __init__.py  __main__.py  app.py  config.py  logging_setup.py
cloudlabeller/core/: __init__.py  dataset.py  events.py  images.py  label_schema.py  labels.py  project.py  raster.py
cloudlabeller/io/: __init__.py  export.py  geometry.py
cloudlabeller/ml/: __init__.py  dataset_builder.py  inference.py  model_spec.py  model_store.py  predict_cli.py  train_cli.py  trainer.py  unet.py
cloudlabeller/photogrammetry/: __init__.py  adjacency.py  cameras.py  colmap_fetch.py  crs.py  extract.py  georef.py  georef_cli.py  mesh_cli.py  meshing.py  mvs.py  mvs_cli.py  options.py  pipeline.py  project_transform.py  reproject_cli.py  run_cli.py  sfm.py
cloudlabeller/transfer/: __init__.py  hylite_bridge.py  mesh_cloud.py  project_to_cloud.py  project_to_image.py  visibility.py
cloudlabeller/ui/: __init__.py  about_dialog.py  camera_gizmo.py  clean_cloud_dialog.py  crs_picker.py  dataset_panel.py  detail_level.py  export_crs_dialog.py  image_view.py  label_panel.py  lasso.py  load_model_dialog.py  log_panel.py  (+13 more)
scripts/: build_portable.py
tests/: test_colmap_fetch.py  test_core.py  test_crs_export.py  test_georef_native.py  test_ml_pipeline.py  test_model_spec.py  test_reconstruction.py  test_reproject.py  test_train_smoke.py
tools/: add_license_headers.py  gen_third_party_licenses.py
(+9 files in other folders)
